@@ -2,6 +2,8 @@ Tue Oct 18 2005  Loic Dachary  <loic@gnu.org>
 
 	* Release 1.0.10 
 	
+	* pokerengine/pokerchips.py: s/tokens/chips/
+
 	* pokerengine/pokerchips.py (PokerChips.int2chips): if the amount is a multiple
 	  of a given chip, stick to it
 
